--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -20,6 +20,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
+	font-family: HYZhengYuan;
 	font: inherit;
 	vertical-align: baseline;
 }
